--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,6 @@
   "framework": "nextjs",
   "installCommand": "npm install",
   "devCommand": "next dev -p 3001",
-  "regions": ["iad1"],
-  "env": {
-    "OPENAI_API_KEY": "@openai_api_key"
-  }
+  "regions": ["iad1"]
 }
 
